<resources>
    <string name="app_name">便民服务</string>

    <string name="unknown">未知</string>
    <string name="s_ago">秒前</string>
    <string name="m_ago">分前</string>
    <string name="h_ago">小时前</string>
    <string name="day_ago">天前</string>
    <string name="month_ago">个月前</string>
    <string name="year_ago">年前</string>
    <string name="loading">加载中...</string>
    <string name="load_failed">加载失败</string>
    <string name="load_failed_desc">Something went wrong Please try again!</string>
    <string name="try_again">重试</string>
    <string name="login">登录</string>
    <string name="now_login">立即登录</string>
    <string name="back">返回</string>
    <string name="hint_user_name">请输入用户名称</string>
    <string name="hint_phone">请输入手机号</string>
    <string name="hint_psw">请输入密码</string>
    <string name="forget_psw">忘记密码</string>
    <string name="auto_login">下次自动登录</string>
    <string name="none_account">------------ 还没有帐号 ------------</string>
    <string name="have_account">------------ 已有帐号? ------------</string>
    <string name="btn_sign_up">免费注册</string>
    <string name="register">注册</string>
    <string name="hint_verification">短信验证码</string>
    <string name="get_verification">获取验证码</string>
    <string name="agree">同意</string>
    <string name="confirm_psw">请再次输入密码</string>
    <string name="btn_submit">提交</string>

    <string name="home">首页</string>
    <string name="bottom_my">我的</string>
    <string name="bottom_shopping_cart">购物车</string>
    <string name="bottom_notification">消息</string>
    <string name="dovisa">认证申办</string>
    <string name="visa_foreign_affairs">外交部认证</string>
    <string name="visa_diplomatic_mission">外交部和使馆认证</string>
    <string name="sign_visa">认证</string>
    <string name="double_visa">双认证</string>
    <string name="double_visa_particularly">双认证加急</string>
    <string name="visa_half">半价认证</string>
    <string name="visa_doc">认证须知</string>
    <string name="visa_success_demo">成功案例</string>
    <string name="help_center">帮助中心</string>
    <string name="about">关于</string>
    <string name="self_info">个人信息</string>
    <string name="location_manage">地址管理</string>
    <string name="sefety_manage">安全管理</string>
    <string name="call_ours">联系我们</string>
    <string name="confim_order">确认订单(%d)</string>
    <string name="select_all">全选</string>
    <string name="cancel_select_all">取消全选</string>
    <string name="show_amount">合计 : %s</string>
</resources>
