<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.eshel.ourvisa.base.widget.MyItemView
        android:background="@color/white"
        android:id="@+id/self_info"
        app:item_icon="@drawable/ic_person"
        app:item_title="@string/self_info"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.eshel.ourvisa.base.widget.MyItemView
        android:id="@+id/location_manage"
        android:background="@color/white"
        app:item_title="@string/location_manage"
        app:item_icon="@drawable/ic_person"
        app:layout_constraintTop_toBottomOf="@id/self_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.eshel.ourvisa.base.widget.MyItemView
        android:id="@+id/sefety_manage"
        android:background="@color/white"
        app:item_title="@string/sefety_manage"
        app:item_icon="@drawable/ic_person"
        app:layout_constraintTop_toBottomOf="@id/location_manage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.eshel.ourvisa.base.widget.MyItemView
        android:id="@+id/call_ours"
        android:background="@color/white"
        app:item_title="@string/call_ours"
        app:item_icon="@drawable/ic_person"
        app:layout_constraintTop_toBottomOf="@id/sefety_manage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</android.support.constraint.ConstraintLayout>