<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bgPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:id="@+id/et_bg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/forget_psw"
        android:layout_margin="20dp"
        android:background="@drawable/rounded_rectangle_white_bg"
        android:layout_width="match_parent"
        android:layout_height="100dp"/>
    <View
        android:id="@+id/line_1"
        android:background="@color/bgPrimary"
        app:layout_constraintTop_toTopOf="@id/et_bg"
        app:layout_constraintBottom_toBottomOf="@id/et_bg"
        app:layout_constraintLeft_toLeftOf="@id/et_bg"
        app:layout_constraintRight_toRightOf="@id/et_bg"
        android:layout_width="wrap_content"
        android:layout_height="1dp"/>

<!--    <View
        android:id="@+id/line_2"
        android:background="@color/bgPrimary"
        app:layout_constraintBottom_toBottomOf="@id/et_bg"
        app:layout_constraintTop_toBottomOf="@id/line_1"
        app:layout_constraintLeft_toLeftOf="@id/et_bg"
        app:layout_constraintRight_toRightOf="@id/et_bg"
        android:layout_width="wrap_content"
        android:layout_height="1dp"/>-->

    <ImageView
        android:id="@+id/icon_user"
        android:src="@drawable/ic_supervised_user_circle"
        app:layout_constraintTop_toTopOf="@id/et_bg"
        app:layout_constraintBottom_toBottomOf="@id/line_1"
        app:layout_constraintLeft_toLeftOf="@id/et_bg"
        app:layout_constraintRight_toLeftOf="@id/et_user_name"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/icon_clear"
        android:src="@drawable/ic_cancel"
        app:layout_constraintTop_toTopOf="@id/et_bg"
        app:layout_constraintBottom_toBottomOf="@id/line_1"
        app:layout_constraintRight_toRightOf="@id/et_bg"
        app:layout_constraintLeft_toRightOf="@id/et_user_name"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/et_user_name"
        android:textSize="@dimen/T2"
        app:layout_constraintTop_toTopOf="@id/et_bg"
        app:layout_constraintBottom_toBottomOf="@id/line_1"
        app:layout_constraintLeft_toRightOf="@id/icon_user"
        app:layout_constraintRight_toLeftOf="@id/icon_clear"
        android:hint="@string/hint_user_name"
        android:background="@null"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/icon_psw"
        android:src="@drawable/ic_psw"
        app:layout_constraintTop_toTopOf="@id/line_1"
        app:layout_constraintBottom_toBottomOf="@id/et_bg"
        app:layout_constraintLeft_toLeftOf="@id/et_bg"
        app:layout_constraintRight_toLeftOf="@id/et_psw"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/icon_hint"
        android:src="@drawable/ic_visibility"
        app:layout_constraintTop_toTopOf="@id/line_1"
        app:layout_constraintBottom_toBottomOf="@id/et_bg"
        app:layout_constraintRight_toRightOf="@id/et_bg"
        app:layout_constraintLeft_toRightOf="@id/et_psw"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_psw"
        android:textSize="@dimen/T2"
        app:layout_constraintTop_toTopOf="@id/line_1"
        app:layout_constraintBottom_toBottomOf="@id/et_bg"
        app:layout_constraintLeft_toRightOf="@id/icon_psw"
        app:layout_constraintRight_toLeftOf="@id/icon_hint"
        android:hint="@string/hint_psw"
        android:background="@null"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/forget_psw"
        android:textColor="@color/colorPrimaryText"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="@id/et_bg"
        app:layout_constraintTop_toBottomOf="@id/et_bg"
        android:textSize="@dimen/T3"
        android:text="@string/forget_psw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_auto_login"
        android:textColor="@color/colorPrimaryDarkText"
        android:layout_marginTop="10dp"
        app:layout_constraintRight_toRightOf="@id/et_bg"
        app:layout_constraintTop_toBottomOf="@id/et_bg"
        android:textSize="@dimen/T3"
        android:text="@string/auto_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/cb_auto_login"
        app:layout_constraintRight_toLeftOf="@id/tv_auto_login"
        app:layout_constraintTop_toBottomOf="@id/et_bg"
        app:layout_constraintTop_toTopOf="@id/tv_auto_login"
        app:layout_constraintBottom_toBottomOf="@id/tv_auto_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@id/tv_auto_login"
        android:layout_margin="15dp"
        android:background="@color/colorPrimary"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/T2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_none_account"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        android:layout_marginTop="15dp"
        android:text="@string/none_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/sign_up"
        android:text="@string/sign_up"
        android:textSize="@dimen/T2"
        android:textColor="@color/colorPrimaryText"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tv_none_account"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="@id/btn_login"
        app:layout_constraintRight_toRightOf="@id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />
</android.support.constraint.ConstraintLayout>