<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:id="@+id/line_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:background="#BBBBBB"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <View
        android:id="@+id/line_top"
        app:layout_constraintBottom_toTopOf="@id/line_bottom"
        android:layout_marginBottom="60dp"
        android:background="#BBBBBB"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <Button
        android:id="@+id/confim_order"
        android:layout_margin="5dp"
        android:textColor="@color/white"
        android:textSize="@dimen/T2"
        android:text="@string/confim_order"
        android:background="@drawable/shape_btn_bg_blue"
        app:layout_constraintTop_toTopOf="@id/line_top"
        app:layout_constraintBottom_toBottomOf="@id/line_bottom"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="133dp"
        android:layout_height="0dp" />

    <CheckBox
        android:id="@+id/cb_select_all"
        app:layout_constraintTop_toTopOf="@id/line_top"
        app:layout_constraintBottom_toBottomOf="@id/line_bottom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/ct_sellect_all"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <CheckedTextView
        android:id="@+id/ct_sellect_all"
        android:background="@drawable/shape_white_gray_btn_bg"
        app:layout_constraintTop_toTopOf="@id/line_top"
        android:padding="4dp"
        android:layout_marginLeft="5dp"
        android:textSize="@dimen/T2"
        android:textColor="@color/black_03"
        android:text="@string/cancel_select_all"
        app:layout_constraintBottom_toBottomOf="@id/line_bottom"
        app:layout_constraintLeft_toRightOf="@id/cb_select_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/show_amount"
        android:background="@drawable/shape_white_gray_btn_bg"
        android:padding="8dp"
        android:textSize="@dimen/T2"
        android:textColor="@color/black_03"
        app:layout_constraintTop_toTopOf="@id/line_top"
        app:layout_constraintBottom_toBottomOf="@id/line_bottom"
        app:layout_constraintLeft_toRightOf="@id/ct_sellect_all"
        android:layout_marginLeft="10dp"
        android:text="@string/show_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_goods_list"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/line_top"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>
</android.support.constraint.ConstraintLayout>