<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bgPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:id="@+id/et_bg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cb_agree"
        android:layout_margin="20dp"
        android:background="@drawable/rounded_rectangle_white_bg"
        android:layout_width="match_parent"
        android:layout_height="200dp"/>
    <View
        android:id="@+id/line_1"
        android:background="@color/bgPrimary"
        app:layout_constraintTop_toTopOf="@id/et_bg"
        app:layout_constraintBottom_toTopOf="@id/line_2"
        app:layout_constraintLeft_toLeftOf="@id/et_bg"
        app:layout_constraintRight_toRightOf="@id/et_bg"
        android:layout_width="wrap_content"
        android:layout_height="1dp"/>

    <View
        android:id="@+id/line_2"
        android:background="@color/bgPrimary"
        app:layout_constraintBottom_toTopOf="@id/line_3"
        app:layout_constraintTop_toBottomOf="@id/line_1"
        app:layout_constraintLeft_toLeftOf="@id/et_bg"
        app:layout_constraintRight_toRightOf="@id/et_bg"
        android:layout_width="wrap_content"
        android:layout_height="1dp"/>

    <View
        android:id="@+id/line_3"
        android:background="@color/bgPrimary"
        app:layout_constraintBottom_toBottomOf="@id/et_bg"
        app:layout_constraintTop_toBottomOf="@id/line_2"
        app:layout_constraintLeft_toLeftOf="@id/et_bg"
        app:layout_constraintRight_toRightOf="@id/et_bg"
        android:layout_width="wrap_content"
        android:layout_height="1dp"/>

    <ImageView
        android:id="@+id/icon_user"
        android:src="@drawable/ic_phone_android"
        app:layout_constraintTop_toTopOf="@id/et_bg"
        app:layout_constraintBottom_toBottomOf="@id/line_1"
        app:layout_constraintLeft_toLeftOf="@id/et_bg"
        app:layout_constraintRight_toLeftOf="@id/et_user_name"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <ImageView
        android:id="@+id/icon_clear"
        android:src="@drawable/ic_cancel"
        app:layout_constraintTop_toTopOf="@id/icon_user"
        app:layout_constraintBottom_toBottomOf="@id/icon_user"
        app:layout_constraintRight_toRightOf="@id/et_bg"
        app:layout_constraintLeft_toRightOf="@id/et_user_name"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/et_user_name"
        android:inputType="phone"
        android:textSize="@dimen/T2"
        app:layout_constraintTop_toTopOf="@id/icon_user"
        app:layout_constraintBottom_toBottomOf="@id/icon_user"
        app:layout_constraintLeft_toRightOf="@id/icon_user"
        app:layout_constraintRight_toLeftOf="@id/icon_clear"
        android:hint="@string/hint_phone"
        android:background="@null"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/icon_verification"
        android:src="@drawable/ic_verified_user"
        app:layout_constraintTop_toTopOf="@id/line_1"
        app:layout_constraintBottom_toBottomOf="@id/line_2"
        app:layout_constraintLeft_toLeftOf="@id/et_bg"
        app:layout_constraintRight_toLeftOf="@id/et_verification"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/get_verification"
        android:text="@string/get_verification"
        android:textColor="@color/white"
        android:background="@drawable/verification_selector_bg"
        android:padding="5dp"
        app:layout_constraintTop_toTopOf="@id/icon_verification"
        app:layout_constraintBottom_toBottomOf="@id/icon_verification"
        app:layout_constraintRight_toRightOf="@id/et_bg"
        app:layout_constraintLeft_toRightOf="@id/et_verification"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/et_verification"
        android:inputType="number"
        android:textSize="@dimen/T2"
        app:layout_constraintTop_toTopOf="@id/icon_verification"
        app:layout_constraintBottom_toBottomOf="@id/icon_verification"
        app:layout_constraintLeft_toRightOf="@id/icon_verification"
        app:layout_constraintRight_toLeftOf="@id/get_verification"
        android:hint="@string/hint_verification"
        android:background="@null"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/icon_psw"
        android:src="@drawable/ic_psw"
        app:layout_constraintTop_toTopOf="@id/line_2"
        app:layout_constraintBottom_toBottomOf="@id/line_3"
        app:layout_constraintLeft_toLeftOf="@id/et_bg"
        app:layout_constraintRight_toLeftOf="@id/et_psw"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <CheckBox
        android:id="@+id/icon_hint"
        android:button="@drawable/ic_checkable_visibility_off_on"
        app:layout_constraintTop_toTopOf="@id/icon_psw"
        app:layout_constraintBottom_toBottomOf="@id/icon_psw"
        app:layout_constraintRight_toRightOf="@id/et_bg"
        app:layout_constraintLeft_toRightOf="@id/et_psw"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/et_psw"
        android:inputType="textPassword"
        android:textSize="@dimen/T2"
        app:layout_constraintTop_toTopOf="@id/icon_psw"
        app:layout_constraintBottom_toBottomOf="@id/icon_psw"
        app:layout_constraintLeft_toRightOf="@id/icon_psw"
        app:layout_constraintRight_toLeftOf="@id/icon_hint"
        android:hint="@string/hint_psw"
        android:background="@null"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/icon_confirm_psw"
        android:src="@drawable/ic_psw"
        app:layout_constraintTop_toTopOf="@id/line_3"
        app:layout_constraintBottom_toBottomOf="@id/et_bg"
        app:layout_constraintLeft_toLeftOf="@id/et_bg"
        app:layout_constraintRight_toLeftOf="@id/et_confirm_psw"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <CheckBox
        android:id="@+id/icon_confirm_psw_hint"
        android:button="@drawable/ic_checkable_visibility_off_on"
        app:layout_constraintTop_toTopOf="@id/icon_confirm_psw"
        app:layout_constraintBottom_toBottomOf="@id/icon_confirm_psw"
        app:layout_constraintRight_toRightOf="@id/et_bg"
        app:layout_constraintLeft_toRightOf="@id/et_confirm_psw"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/et_confirm_psw"
        android:inputType="textPassword"
        android:textSize="@dimen/T2"
        app:layout_constraintTop_toTopOf="@id/icon_confirm_psw"
        app:layout_constraintBottom_toBottomOf="@id/icon_confirm_psw"
        app:layout_constraintLeft_toRightOf="@id/icon_confirm_psw"
        app:layout_constraintRight_toLeftOf="@id/icon_confirm_psw_hint"
        android:hint="@string/confirm_psw"
        android:background="@null"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_submit"
        app:layout_constraintTop_toBottomOf="@id/et_bg"
        android:layout_margin="15dp"
        android:background="@color/colorPrimary"
        android:text="@string/btn_submit"
        android:textColor="@color/white"
        android:textSize="@dimen/T2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</android.support.constraint.ConstraintLayout>